2005-05-15  Murray Cumming <murrayc@murrayc.com>

	* libxml++/document.h: Add comments about possibly deriving this 
	from Node, though it needs investigation, and we can not do this 
	in the stable API.
	* libxml++/nodes/node.cc: get_namespace(), get_namespace_prefix(): 
	Return an empty string if the node is actually a Document, because 
	the underlying xmlDocument struct has no ns field. This should 
	prevent the crash in bug #161825.

2005-05-15  Murray Cumming <murrayc@murrayc.com>

	* docs/index.html: Add link to the LGPL text.

2005-04-24  Murray Cumming <murrayc@murrayc.com>

	* libxml++/parsers/domparser.cc: parse_context(): 
	Delete the context after, not before, checking it for an error.
 	Bug #156352 from Jim Garrison.

2005-04-24  Murray Cumming <murrayc@murrayc.com>

	* libxml++/parsers/saxparser.cc: SaxParserCallback::characters()
	Call on_characters(), not on_cdata_block(), so that the correct 
	derived handler is called. Bug #301712 and patch from 
	Aaron Walker.

2005-04-24  Murray Cumming <murrayc@murrayc.com>

	* libxml++-2.6.pc.in: Remove -I for the include location of 
	a config file, because we don't install one. Bug #301727 
	from Aaron Walker.

2005-03-15  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/document.cc: set_entity_declaration(): Pass 0 instead 
	of empty strings for the public ID and system ID, if an empty 
	string is provided. This stops libxml from using a useless empty 
	string.

2005-03-09  Cedric Gustin <cedric.gustin@swing.be>

	* MSVC_Net2003/Makefile.am: Add blank.cpp to EXTRA_DIST.
	* MSVC_Net2003/examples/*/*.vcproj: Change name of PDB file to
	$(OutDir)/$(TargetName).pdb.

This is the HEAD branch.
	
2.10.0:
	
2005-03-08  Christophe de Vienne  <cdevienne@netcourrier.com>

	* docs/reference/Makefile.am: Added one more rule so the "make
	distcheck" works from a clean cvs working copy.

2005-03-08  Christophe de Vienne  <cdevienne@netcourrier.com>

	* docs/manual/Makefile.am, docs/reference/Makefile.am: Added a few