@@ -81,4 +81,4 @@ namespace xmlpp
     return impl_;
   }
 
-};
+}
